# olympics

./: .gitignore  LICENSE  README.md  pyproject.toml
database/: model.sql  olympics.db
olympics/: __init__.py  __main__.py  api.py  cli.py  db.py
tests/: test_api.py  test_cli.py  test_db.py  test_main.py
