[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]',
]

[tool.pytest.ini_options]
addopts = "-ra -v --cov --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
include = ['olympics/*', 'tests/*']
