[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]',
]

[tool.pytest.ini_options]
addopts = "-ra -v --cov --cov-report=term-missing"


[tool.coverage.run]
branch = true
include = ['olympics/*', 'tests/*']
